Bug 22558 - Update styles to wrap and center text (p=rsjtdrjgfuzkfg r=lone id=32-6080)
git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@19762 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/extensions/AlbumArt/chrome/skin/albumArt.css
+++ b/extensions/AlbumArt/chrome/skin/albumArt.css
@@ -37,6 +37,11 @@
   -moz-box-pack: center;
 }
 
+.albumArtNotSelectedContainer > description,
+.albumArtNotPlayingContainer > description{
+  text-align: center;
+}
+
 .albumArtNowSelectedDragAndDrop,
 .albumArtNowPlayingDragAndDrop {
   -moz-box-flex: 1;
